--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,14 +63,15 @@
                         android:textColor="#FCF9F9"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                        app:layout_constraintTop_toBottomOf="@+id/textView2"
+                        tools:text="0" />
 
                     <TextView
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="14dp"
-                        android:text="Score"
+                        android:text="Puntuación"
                         android:textColor="#F2F2F2"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
