--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -27,7 +27,7 @@
         android:textColor="#15BE67"
         android:textSize="50sp" />
 
-    <Button
+    <TextView
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,27 +41,27 @@
         android:onClick="puntuacionFinal" />
 
     <Button
-        android:id="@+id/button02"
+        android:id="@+id/botJugar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:background="@android:color/background_dark"
         android:onClick="jugar"
-        android:text="PLAY AGAIN"
+        android:text="JUGAR DE NUEVO"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="12pt"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"/>
+        android:textSize="12pt" />
 
     <Button
-        android:id="@+id/button03"
+        android:id="@+id/botSalir"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:background="@android:color/background_dark"
         android:onClick="salirJuego"
-        android:text="EXIT"
+        android:text="SALIR"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="12pt"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"/>
+        android:textSize="12pt" />
 
 </LinearLayout>
