--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,30 +53,38 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/colorBlack">
+                    android:background="@color/colorDarkBlue">
 
                     <TextView
-                        android:id="@+id/caja_score"
-                        android:layout_width="51dp"
-                        android:layout_height="38dp"
-                        android:layout_marginTop="36dp"
-                        android:textColor="#FCF9F9"
+                        android:id="@+id/scoreBox"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:background="@color/colorDarkBlue"
+                        android:inputType="textMultiLine"
+                        android:text="Score"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="25sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView2"
-                        tools:text="0" />
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/scoreBoxContent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="14dp"
-                        android:text="Puntuación"
-                        android:textColor="#F2F2F2"
-                        android:textSize="18sp"
+                        android:text="0"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/scoreBox"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView" />
+                        app:layout_constraintHorizontal_bias="0.446"
+                        app:layout_constraintStart_toStartOf="@+id/scoreBox"
+                        app:layout_constraintTop_toTopOf="@+id/scoreBox"
+                        app:layout_constraintVertical_bias="1.0" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
 
