--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -62,13 +62,31 @@
         android:onClick="jugar"
         android:text="PLAY AGAIN"
         android:textColor="#FFFFFF"
+        android:layout_marginTop="10dp"
+
         android:textSize="12pt" />
+
+
+
+    <Button
+        android:id="@+id/button_viewAll"
+        android:layout_width="262dp"
+        android:layout_height="82dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/dark"
+        android:fontFamily="monospace"
+        android:text="Ranking"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/botSalir"
         android:layout_width="262dp"
         android:layout_height="82dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/dark"
         android:fontFamily="monospace"
