--- a/app/src/main/res/layout/click_photo.xml
+++ b/app/src/main/res/layout/click_photo.xml
@@ -27,6 +27,7 @@
         android:textSize="12pt" />
 
     <ImageView
+        android:id="@+id/fotoUsuario"
         android:layout_width="200dp"
         android:layout_height="209dp"
         android:layout_marginTop="0dp"
