--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -71,15 +71,16 @@
         android:layout_width="262dp"
         android:layout_height="82dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/dark"
+
         android:fontFamily="monospace"
         android:onClick="jugar"
         android:text="PLAY AGAIN"
         android:textColor="#FFFFFF"
-        android:layout_marginTop="10dp"
-
-        android:textSize="12pt" />
+        android:textSize="12pt"
+        android:visibility="invisible" />
 
 
 
