--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,6 +30,12 @@
         android:textSize="50sp" />
 
 
+    <ImageView
+        android:id="@+id/imageViewPlayer"
+        android:layout_marginBottom="30dp"
+        android:layout_width="200dp"
+        android:layout_height="130dp" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="273dp"
@@ -40,10 +48,11 @@
     <TextView
         android:id="@+id/score"
         android:layout_width="120dp"
-        android:layout_height="82dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="70dp"
-        android:layout_marginBottom="-82dp"
+        android:layout_marginBottom="-50dp"
+
         android:background="@drawable/dark"
         android:fontFamily="monospace"
         android:onClick="puntuacionFinal"
@@ -55,7 +64,7 @@
     <TextView
         android:id="@+id/time"
         android:layout_width="120dp"
-        android:layout_height="82dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="130dp"
         android:layout_marginRight="60dp"
         android:background="@drawable/dark"
@@ -69,25 +78,22 @@
     <Button
         android:id="@+id/botJugar"
         android:layout_width="262dp"
-        android:layout_height="82dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/dark"
-
         android:fontFamily="monospace"
         android:onClick="jugar"
         android:text="PLAY AGAIN"
         android:textColor="#FFFFFF"
-        android:textSize="12pt"
-        android:visibility="invisible" />
-
+        android:textSize="12pt" />
 
 
     <Button
         android:id="@+id/button_viewAll"
         android:layout_width="262dp"
-        android:layout_height="82dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
@@ -100,7 +106,7 @@
     <Button
         android:id="@+id/botSalir"
         android:layout_width="262dp"
-        android:layout_height="82dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
@@ -112,3 +118,4 @@
         android:textSize="12pt" />
 
 </LinearLayout>
+
